option(BENCHMAX_DATABASE "Enable database storage for results." OFF)
option(BENCHMAX_LOGGING "Enable logging." ON)
option(BENCHMAX_SSH "Enable SSH backend." ON)

include_directories(${CMAKE_SOURCE_DIR}/src)
file(GLOB_RECURSE benchmax_sources "*.cpp")
add_executable( benchmax ${benchmax_sources})
target_link_libraries(benchmax stdc++fs pthread carl-shared ${Boost_SHARED})

if(BENCHMAX_DATABASE)
	find_library(LIBMYSQL NAMES libmysqlclient)
	target_link_libraries(benchmax ${LIBMYSQL} mysqlcppconn)
endif()

if(BENCHMAX_SSH)
	find_library(LIBSSH NAMES ssh)
	if(LIBSSH)
		target_link_libraries(benchmax ${LIBSSH})
	else()
		message(STATUS "Did not find libssh, disabled SSH backend.")
		set(BENCHMAX_SSH OFF)
	endif()
else()
	message(STATUS "SSH backend disabled.")
endif()

configure_file(${CMAKE_SOURCE_DIR}/src/benchmax/config.h.in ${CMAKE_SOURCE_DIR}/src/benchmax/config.h)
